[package]
name = "binary_set"
version = "0.10.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Binary set file."

repository = "https://github.com/OdenShirataki/binary_set"

keywords = ["index", "file", "avltree", "memmap", "database"]
categories = ["algorithms", "caching", "filesystem"]
license = "MIT/Apache-2.0"

[dependencies]
various_data_file = { version = "0.14.0" }
idx_file = { version = "0.47.0" }
